Fix authors field parsing in CSV import
Corrected the parsing of the 'authors' field in the fromANDREWROBERTSList function to handle empty values, preventing errors when authors are missing in the CSV data.

--- a/searchApp.html
+++ b/searchApp.html
@@ -289,7 +289,7 @@ This is a web application for searching Google Apps Script Libraries. This can b
             description: description,
             siteUrl: gitHub || moreinf,
             publishedDate: createdTime,
-            authors: authors.split(","),
+            authors: authors ? authors.split(",") : [],
             tags: tags ? tags.split(",") : [],
             projectKey: projectKey,
           });
